Added better functionality to the welcome page

--- a/html/welcome.html
+++ b/html/welcome.html
@@ -11,19 +11,27 @@
     <div class="container" change-pg="1">
 
         <!-- English -->
-         <div class="content" do-translate="en">
+         <div class="content pad-200" do-translate="en">
             <p class="welcome-text big">Welcome to Actors2!</p>
-            <p class="welcome-text small">It's the first time you open it, should we start the tutorial?</p>
+            <p class="welcome-text medium">It's the first time you open it, should we start the tutorial?</p>
             <br /><br />
-            <a class="button button-large green" onclick="nextPage();">SURE THING</a> <a class="button button-large red" onclick="closePanel();">NOT NOW, THANKS</a>
+            <a class="button button-large green" onclick="nextPage();">SURE THING</a> <a class="button button-large red" onclick="closePanel();">NOT NOW</a>
+        </div>
+        <div class="welc-checks" do-translate="en">
+            <p class="welcome-text small" prop="nav"> <img src="asset://garrysmod/materials/icon16/tick.png" /> Addon verification done succefull! </p>
+            <p class="welcome-text small" prop="nonav"><img src="asset://garrysmod/materials/icon16/tick.png" /> An error ocurred, Actors2 may not work properly.</p></p>
         </div>
 
         <!-- Português -->
-         <div class="content" do-translate="ptbr">
+         <div class="content pad-200" do-translate="ptbr">
             <p class="welcome-text big">Bem Vindo ao Atores2!</p>
-            <p class="welcome-text small">É a primeira vez que você o abre, devemos começar o tutorial?</p>
+            <p class="welcome-text medium">É a primeira vez que você o abre, devemos começar o tutorial?</p>
             <br /><br />
-            <a class="button button-large green" onclick="nextPage();">COM CERTEZA</a> <a class="button button-large red" onclick="closePanel();">AGORA NÃO, OBRIGADO</a>
+            <a class="button button-large green" onclick="nextPage();">COM CERTEZA</a> <a class="button button-large red" onclick="closePanel();">AGORA NÃO</a>
+        </div>
+        <div class="welc-checks" do-translate="ptbr">
+            <p class="welcome-text small" prop="nav"> <img src="asset://garrysmod/materials/icon16/tick.png" /> Verificação do addon feita com sucesso!</p>
+            <p class="welcome-text small" prop="nonav"><img src="asset://garrysmod/materials/icon16/tick.png" /> Ocorreu um erro, Atores2 pode não funcionar corretamente.</p></p>
         </div>
 
     </div>
@@ -31,18 +39,15 @@
     <div class="container" change-pg="2">
 
         <!-- English -->
-         <div class="content" do-translate="en">
-             <p class="welcome-text big">Alright!</p>
-             <p class="welcome-text small">Let me check some things first..</p>
-         </div>
+        <div class="content pad-50" do-translate="en">
+            <p class="welcome-text big">Page2</p>
+            <a class="button button-large red" onclick="closePanel();">CLOSE</a>
+        </div>
 
          <!-- Português -->
-         <div class="content" do-translate="ptbr">
-             <p class="welcome-text big">Beleza!</p>
-             <p class="welcome-text small">Deixe-me checar algumas coisas primeiro..</p>
-             <br /><br />
-
-             <p class="welcome-text small" prop="nav">NavMesh existe...</p>
+         <div class="content pad-50" do-translate="ptbr">
+            <p class="welcome-text big">Pagina2</p>
+            <a class="button button-large red" onclick="closePanel();">FECHAR</a>
          </div>
 
     </div>
