Improved actor settings panel and search functions, other additions

--- a/html/welcome.html
+++ b/html/welcome.html
@@ -23,7 +23,7 @@
             <p class="welcome-text small" prop="check"> <img src="asset://garrysmod/materials/icon16/tick.png" /> Verification successful! </p>
             <p class="welcome-text small" prop="nocheck">
                 <img src="asset://garrysmod/materials/icon16/cross.png" />
-                Verification Failed!  
+                Verification Failed: 
                 <span id="checkreason" class="welcome-text smallish"></span>
             </p>
         </div>
@@ -41,7 +41,7 @@
             <p class="welcome-text small" prop="check"><img src="asset://garrysmod/materials/icon16/tick.png" /> Verificação feita com sucesso!</p>
             <p class="welcome-text small" prop="nocheck">
                 <img src="asset://garrysmod/materials/icon16/cross.png" />
-                Falha na Verificação! 
+                Falha na Verificação: 
                 <span id="checkreason" class="welcome-text smallish"></span>
             </p>
         </div>
