Implemented Initial RunBehaviour function and other changes

--- a/html/welcome.html
+++ b/html/welcome.html
@@ -13,7 +13,7 @@
         <!-- English -->
          <div class="content pad-200" do-translate="en">
             <p class="welcome-text big">Welcome to Actors2!</p>
-            <p class="welcome-text medium">There's a especially fast tutorial avaliable, should we start it?</p>
+            <p class="welcome-text medium">A fast tutorial is avaliable, let's start it?</p>
             <br /><br />
             <a class="button button-large green" onclick="nextPage();">SURE THING</a>
             <a class="button button-large red" onclick="closePanel();">NOT NOW</a>
@@ -31,7 +31,7 @@
         <!-- Português -->
          <div class="content pad-200" do-translate="ptbr">
             <p class="welcome-text big">Bem Vindo ao Atores2!</p>
-            <p class="welcome-text medium">Um tutorial especialmente rápido está disponível, devemos começar-lo?</p>
+            <p class="welcome-text medium">Um tutorial rápido está disponível, vamos começar-lo?</p>
             <br /><br />
             <a class="button button-large green" onclick="nextPage();">COM CERTEZA</a>
             <a class="button button-large red" onclick="closePanel();">AGORA NÃO</a>
